--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.9.0",
+    "@blocknote/react": "^0.9.0",
     "@prisma/client": "^5.1.1",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
