--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dompurify": "^3.0.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "eslint-plugin-risxss": "^2.1.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -25,6 +27,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "prisma": "^5.1.1"
   }
 }
