--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
+    "@types/react-datepicker": "^4.15.0",
     "prisma": "^5.1.1"
   }
 }
