--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "argon2": "^0.31.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "eslint": "8.47.0",
