--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "eslint-plugin-risxss": "^2.1.0",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -32,6 +33,8 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react-datepicker": "^4.15.0",
     "prisma": "^5.1.1"
   }
