--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.4.1",
     "argon2": "^0.31.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
