--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "vercel-build": "prisma generate && next build",
     "postinstall": "prisma generate",
     "build": "next build",
     "dev": "next dev",
